# llvm-course

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.c
app/abilities/: main_ability.c
asm2ir/: CMakeLists.txt  a.out  sim.c  sim.h
asm2ir/a.out.dSYM/Contents/Resources/DWARF/: a.out
asm2ir/src/: asm2ir.cpp  asm2ir.hpp  main.cpp  my_app.s
asm2ir/src/utils/: utils.hpp
graph_app/: CMakeLists.txt  README.md
graph_app/app/: CMakeLists.txt
graph_app/app/abilities/: main_ability.c  main_ability.h
graph_app/graphic/: CMakeLists.txt  public_interface.c  public_interface.h
graph_app/llvm_ir/: main_ability-O3.ll  main_ability-Oz.ll  main_ability.ll-o0  main_ability.ll-o3  main_ability.ll-os
graphic/: CMakeLists.txt  public_interface.c  public_interface.h
ir_generator/: CMakeLists.txt
ir_generator/src/: ir_generator.hpp  ir_reader.hpp  main.cpp
statistic/: statistic.py
trace_pass/: CMakeLists.txt
trace_pass/src/: log.c  trace_pass.cpp
